# imtag

./: CMakeLists.txt  LICENSE  README.md  imtag.code-workspace  out.s
include/: imtag.hpp  imtag_statistics.hpp  span_shim.hpp
src/: CMakeLists.txt  SegmentImageImpl.cpp  SegmentImageImpl.hpp  SegmentImageImpl_Scanline.cpp  avx2_scanline.hpp  disjoint_set.hpp  imtag.cpp  imtag_statistics.cpp  morphology.cpp  naive_scanline.hpp  neon_scanline.hpp  omp_scanline.hpp  scanline_base.hpp  sve_scanline.hpp  try_openmp_simd.cpp
src/scanlines/: avx2_scanline.hpp  index.hpp  naive_scanline.hpp  neon_scanline.hpp  omp_scanline.hpp  scanline_base.hpp  sse4_scanline.hpp
test/: CMakeLists.txt  blob.cpp  imtag_cross.cpp  imtag_test.cpp  imtag_test_compare_cv.cpp
test/cv_comparison/: CMakeLists.txt  cvConnectedComponentsWithStats.cpp  cvConnectedComponentsWithStats.h
